--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^3.2.0",
+    "@openzeppelin/contracts": "^3.4.0",
+    "@openzeppelin/hardhat-upgrades": "^1.6.0",
+    "@openzeppelin/contracts-upgradeable": "^3.4.0",
     "chai": "^4.2.0",
     "chalk": "^4.1.0",
-    "ethereum-waffle": "^3.1.1",
-    "ethers": "^5.0.17",
-    "hardhat": "^2.0.6",
+    "ethereum-waffle": "^3.2.2",
+    "ethers": "^5.0.29",
+    "hardhat": "^2.0.8",
     "node-watch": "^0.7.0",
     "qrcode-terminal": "^0.12.0",
     "ramda": "^0.27.1"
