--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 packages/subgraph/subgraph.yaml
 packages/subgraph/generated
 packages/hardhat/*.txt
+packages/hardhat/.openzeppelin
 **/aws.json
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
