--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -16,6 +16,7 @@
     "@openzeppelin/contracts": "^3.4.0",
     "@openzeppelin/hardhat-upgrades": "^1.6.0",
     "@openzeppelin/contracts-upgradeable": "^3.4.0",
+    "@openzeppelin/test-helpers": "^0.5.10",
     "chai": "^4.2.0",
     "chalk": "^4.1.0",
     "ethereum-waffle": "^3.2.2",
