Add initial circleci integration

--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -17,6 +17,8 @@
     "@openzeppelin/hardhat-upgrades": "^1.6.0",
     "@openzeppelin/contracts-upgradeable": "^3.4.0",
     "@openzeppelin/test-helpers": "^0.5.10",
+    "hardhat-gas-reporter": "^1.0.4",
+    "solidity-coverage": "^0.7.14",
     "chai": "^4.2.0",
     "chalk": "^4.1.0",
     "ethereum-waffle": "^3.2.2",
@@ -30,6 +32,7 @@
     "chain": "hardhat node --hostname 0.0.0.0",
     "fork": "hardhat node --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
     "test": "hardhat test --network hardhat",
+    "coverage": "hardhat coverage --network hardhat",
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.js && hardhat run scripts/publish.js",
     "watch": "node scripts/watch.js",
