--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,93 +1,7 @@
-version: 2.1 
-# TODO: contract security: https://blog.mythx.io/howto/mythx-and-continuous-integration-part-1-circleci/
-# TODO: codechecks gas cost with codechecks.io
-
+version: 2.1
 orbs:
-  coveralls: coveralls/coveralls@1.0.6
-
-jobs:
-  checkout_and_compile:
-    docker:
-      - image: circleci/node:14.15.1
-    working_directory: ~/nft-canvas-ci
-    steps:
-      - checkout # check out source code to working directory
-      - restore_cache: # restore the dependency cache
-          name: Restore yarn package cache
-          key: yarn-packages-{{ checksum "yarn.lock" }}
-      - run:
-          name: Setup Environment Variables
-          command: cp .env.default .env
-      - run:
-          name: Fetch Dependencies
-          command: yarn install
-      - save_cache: # save the dependency cache
-          name: Save yarn package cache
-          key: yarn-packages-{{ checksum "yarn.lock" }}
-          paths:
-            - ./node_modules
-      - run: # Compile
-          name: Compile
-          command: yarn compile
-      - save_cache:
-          name: Save compiled cache
-          key: compiled-env-{{ .Environment.CIRCLE_SHA1 }}
-          paths:
-            - ~/nft-canvas-ci
-      # - run:
-      #     name: Prettier
-      #     command: yarn prettier --check .
-      # - run:
-      #     name: Solhint
-      #     command: yarn lint
-
-  test:
-    docker:
-      - image: circleci/node:14.15.1
-    working_directory: ~/nft-canvas-ci
-    steps:
-      - run:
-          name: Fetch solc version
-          command: docker pull ethereum/solc:0.7.4
-      - restore_cache:
-          key: compiled-env-{{ .Environment.CIRCLE_SHA1 }}
-      - run:
-          name: Setup Environment Variables
-          command: cp .env.default .env
-      - run:
-          name: Test RPC
-          command: yarn chain
-          background: true
-      - run:
-          name: Hardhat Test
-          command: yarn test
-
-  coverage:
-    docker:
-      - image: circleci/node:14.15.1
-    working_directory: ~/nft-canvas-ci
-    steps:
-      - run:
-          name: Fetch solc version
-          command: docker pull ethereum/solc:0.7.4
-      - restore_cache:
-          key: compiled-env-{{ .Environment.CIRCLE_SHA1 }}
-      - run:
-          name: Setup Environment Variables
-          command: cp .env.default .env
-      - run:
-          name: Coverage
-          command: yarn coverage
-      - coveralls/upload # upload lcov.info to coveralls.io
-
+  node: circleci/node@3.0.0
 workflows:
-  version: 2
-  build-and-test:
+  node-tests:
     jobs:
-      - checkout_and_compile
-      - test:
-          requires:
-            - checkout_and_compile
-      - coverage:
-          requires:
-            - checkout_and_compile
+      - node/test
