--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,9 @@ jobs:
       - restore_cache: # restore the dependency cache
           name: Restore yarn package cache
           key: yarn-packages-{{ checksum "yarn.lock" }}
-      - run:
-          name: Setup Environment Variables
-          command: cp .env.default .env
+      # - run:
+      #     name: Setup Environment Variables
+      #     command: cp .env.default .env
       - run:
           name: Fetch Dependencies
           command: yarn install
@@ -51,9 +51,9 @@ jobs:
           command: docker pull ethereum/solc:0.7.4
       - restore_cache:
           key: compiled-env-{{ .Environment.CIRCLE_SHA1 }}
-      - run:
-          name: Setup Environment Variables
-          command: cp .env.default .env
+      # - run:
+      #     name: Setup Environment Variables
+      #     command: cp .env.default .env
       - run:
           name: Test RPC
           command: yarn chain
@@ -72,9 +72,9 @@ jobs:
           command: docker pull ethereum/solc:0.7.4
       - restore_cache:
           key: compiled-env-{{ .Environment.CIRCLE_SHA1 }}
-      - run:
-          name: Setup Environment Variables
-          command: cp .env.default .env
+      # - run:
+      #     name: Setup Environment Variables
+      #     command: cp .env.default .env
       - run:
           name: Coverage
           command: yarn coverage
