--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -21,7 +21,10 @@
     "solidity-coverage": "^0.7.14",
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
+    "mocha-multi": "^1.1.3",
     "mocha-junit-reporter": "^2.0.0",
+    "coveralls": "^3.1.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "chalk": "^4.1.0",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.29",
