--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -8,7 +8,9 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-prettier": "^3.1.4"
+    "eslint-plugin-prettier": "^3.1.4",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
@@ -16,7 +18,14 @@
     "@openzeppelin/contracts": "^3.4.0",
     "@openzeppelin/hardhat-upgrades": "^1.6.0",
     "@openzeppelin/contracts-upgradeable": "^3.4.0",
-    "@openzeppelin/test-helpers": "^0.5.10",
+    "@typechain/ethers-v5": "^5.0.0",
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.28",
+    "typechain": "^4.0.1",
+    "typescript": "^4.1.5",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^9.1.1",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.14",
     "chai": "^4.2.0",
@@ -27,8 +36,9 @@
     "mocha-lcov-reporter": "^1.3.0",
     "chalk": "^4.1.0",
     "ethereum-waffle": "^3.2.2",
-    "ethers": "^5.0.29",
+    "ethers": "^5.0.31",
     "hardhat": "^2.0.8",
+    "hardhat-typechain": "^0.3.4",
     "node-watch": "^0.7.0",
     "qrcode-terminal": "^0.12.0",
     "ramda": "^0.27.1"
