Use strings and experimental encoder for uris, probably moving to simple events in the future

--- a/packages/hardhat/.mocharc.json
+++ b/packages/hardhat/.mocharc.json
@@ -1,5 +1,5 @@
 {
-    "require": ["ts-node/register", "hardhat/register"],
+    "require": ["ts-node/register/files", "hardhat/register"],
     "timeout": 20000,
     "recursive": "packages/hardhat/test",
     "extension": ["ts"]
