--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -13,34 +13,34 @@
     "@typescript-eslint/parser": "^3.10.1"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^3.4.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^3.4.1",
     "@openzeppelin/hardhat-upgrades": "^1.6.0",
-    "@openzeppelin/contracts-upgradeable": "^3.4.0",
-    "@typechain/ethers-v5": "^5.0.0",
+    "@openzeppelin/contracts-upgradeable": "^3.4.1",
+    "@typechain/ethers-v5": "^6.0.1",
     "@types/chai": "^4.2.15",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.28",
-    "typechain": "^4.0.1",
-    "typescript": "^4.1.5",
+    "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.31",
+    "typechain": "^4.0.2",
+    "typescript": "^4.2.2",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.14",
     "@tenderly/hardhat-tenderly": "^1.0.10",
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
+    "chai": "^4.3.3",
+    "mocha": "^8.3.0",
     "mocha-multi": "^1.1.3",
     "mocha-junit-reporter": "^2.0.0",
     "coveralls": "^3.1.0",
     "mocha-lcov-reporter": "^1.3.0",
     "chalk": "^4.1.0",
-    "ethereum-waffle": "^3.2.2",
+    "ethereum-waffle": "^3.3.0",
     "ethers": "^5.0.31",
-    "hardhat": "^2.0.8",
-    "hardhat-typechain": "^0.3.4",
+    "hardhat": "^2.1.0",
+    "hardhat-typechain": "^0.3.5",
     "node-watch": "^0.7.0",
     "qrcode-terminal": "^0.12.0",
     "ramda": "^0.27.1"
@@ -51,7 +51,7 @@
     "test": "hardhat test --network hardhat",
     "coverage": "hardhat coverage --network hardhat",
     "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.js",
+    "deploy": "hardhat run scripts/deploy.ts",
     "postdeploy": "hardhat run scripts/publish.js",
     "watch": "node scripts/watch.js",
     "accounts": "hardhat accounts",
