--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -15,15 +15,16 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
+    "@ant-design/icons": "^4.5.0",
     "@apollo/react-hooks": "^4.0.0",
-    "@ethersproject/address": "^5.0.5",
-    "@ethersproject/bignumber": "^5.0.8",
-    "@ethersproject/bytes": "^5.0.5",
-    "@ethersproject/contracts": "^5.0.5",
-    "@ethersproject/providers": "^5.0.12",
+    "@ethersproject/address": "^5.0.10",
+    "@ethersproject/bignumber": "^5.0.14",
+    "@ethersproject/bytes": "^5.0.10",
+    "@ethersproject/contracts": "^5.0.11",
+    "@ethersproject/providers": "^5.0.23",
     "@ethersproject/solidity": "^5.0.9",
-    "@ethersproject/units": "^5.0.6",
+    "@ethersproject/units": "^5.0.10",
+    "@pinata/sdk": "^1.1.13",
     "@ramp-network/ramp-instant-sdk": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
