Add (user) gallery and Transfer events pages

--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -4,46 +4,47 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1"
+    "eslint-plugin-prettier": "^3.1.4"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^3.4.1",
-    "@openzeppelin/hardhat-upgrades": "^1.6.0",
     "@openzeppelin/contracts-upgradeable": "^3.4.1",
+    "@openzeppelin/hardhat-upgrades": "^1.6.0",
+    "@tenderly/hardhat-tenderly": "^1.0.10",
     "@typechain/ethers-v5": "^6.0.1",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
-    "typechain": "^4.0.2",
-    "typescript": "^4.2.2",
-    "ts-generator": "^0.1.1",
-    "ts-node": "^9.1.1",
-    "hardhat-gas-reporter": "^1.0.4",
-    "solidity-coverage": "^0.7.14",
-    "@tenderly/hardhat-tenderly": "^1.0.10",
     "chai": "^4.3.3",
-    "mocha": "^8.3.0",
-    "mocha-multi": "^1.1.3",
-    "mocha-junit-reporter": "^2.0.0",
-    "coveralls": "^3.1.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "chalk": "^4.1.0",
+    "coveralls": "^3.1.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.0.31",
     "hardhat": "^2.1.0",
+    "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.5",
+    "ipfs-http-client": "^49.0.2",
+    "mocha": "^8.3.0",
+    "mocha-junit-reporter": "^2.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "mocha-multi": "^1.1.3",
     "node-watch": "^0.7.0",
     "qrcode-terminal": "^0.12.0",
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "solidity-coverage": "^0.7.14",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^9.1.1",
+    "typechain": "^4.0.2",
+    "typescript": "^4.2.2"
   },
   "scripts": {
     "chain": "hardhat node",
@@ -52,6 +53,7 @@
     "coverage": "hardhat coverage --network hardhat",
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.ts",
+    "mint": "hardhat run scripts/mint.ts",
     "postdeploy": "hardhat run scripts/publish.js",
     "watch": "node scripts/watch.js",
     "accounts": "hardhat accounts",
