--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-app:test": "yarn workspace @scaffold-eth/react-app test",
     "build": "yarn workspace @scaffold-eth/react-app build --max-old-space-size=12288",
     "chain": "yarn workspace @scaffold-eth/hardhat chain",
+    "console": "yarn workspace @scaffold-eth/hardhat hardhat console",
     "fork": "yarn workspace @scaffold-eth/hardhat fork",
     "node": "yarn workspace @scaffold-eth/hardhat chain",
     "test": "yarn workspace @scaffold-eth/hardhat test",
@@ -35,6 +36,7 @@
     "account": "yarn workspace @scaffold-eth/hardhat account",
     "mine": "cd packages/hardhat && npx hardhat mine",
     "wallet": "cd packages/hardhat && npx hardhat wallet",
+    "mint": "yarn workspace @scaffold-eth/hardhat mint",
     "fundedwallet": "cd packages/hardhat && npx hardhat fundedwallet",
     "flatten": "cd packages/hardhat && npx hardhat flatten",
     "graph-run-node": "cd docker/graph-node && docker-compose up",
