Get basic GraphProtocol events (Mint/Transfers) working

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ packages/hardhat/typechain
 docker/**/data
 
 packages/subgraph/config/config.json
+packages/subgraph/config/config.ts
 tenderly.yaml
 
 # dependencies
