--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-app:start": "yarn workspace @scaffold-eth/react-app start",
     "react-app:test": "yarn workspace @scaffold-eth/react-app test",
     "build": "yarn workspace @scaffold-eth/react-app build --max-old-space-size=12288",
-    "chain": "yarn workspace @scaffold-eth/hardhat chain",
+    "chain": "yarn workspace @scaffold-eth/hardhat chain --hostname 0.0.0.0",
     "console": "yarn workspace @scaffold-eth/hardhat hardhat console",
     "fork": "yarn workspace @scaffold-eth/hardhat fork",
     "node": "yarn workspace @scaffold-eth/hardhat chain",
