--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -11,10 +11,11 @@
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 scaffold-eth/your-contract"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.18.0",
-    "@graphprotocol/graph-ts": "0.18.0"
+    "@amxx/graphprotocol-utils": "^0.0.8",
+    "@graphprotocol/graph-cli": "^0.20.0",
+    "@graphprotocol/graph-ts": "^0.20.0"
   },
   "devDependencies": {
-    "mustache": "^3.1.0"
+    "mustache": "^4.1.0"
   }
 }
