--- a/packages/subgraph/src/subgraph.template.yaml
+++ b/packages/subgraph/src/subgraph.template.yaml
@@ -69,7 +69,8 @@ dataSources:
         #   handler: handleApproval
         # - event: BatchApproval(indexed address,indexed address,uint256[])
         #   handler: handleBatchApproval
-        # TokenTypesCreated(bytes32[],uint256[])
+        - event: TokenTypesCreated(bytes32[],uint256[])
+          handler: handleTokenTypesCreated
   # - TransferChildTokenBatch(indexed address,indexed uint256,indexed address,address,uint256[],uint256[])
       # callHandlers: 
       #   - function: mint(address,bytes32,string,uint256,address,bytes)
