--- a/packages/subgraph/src/subgraph.template.yaml
+++ b/packages/subgraph/src/subgraph.template.yaml
@@ -55,8 +55,6 @@ dataSources:
         #   handler: handleTransferChildToken
         # - event: TransferChildTokenBatch(indexed address,indexed uint256,indexed address,address,uint256[],uint256[])
         #   handler: handleTransferChildTokenBatch
-        # - event: UriUpdated(indexed uint256,string)
-        #   handler: handleUriUpdated
         - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
           handler: handleTransferSingle
         - event: TransferBatch(indexed address,indexed address,indexed address,uint256[],uint256[])
@@ -73,6 +71,10 @@ dataSources:
           handler: handleTokenTypesCreated
         - event: ChildTypeAuthorized(uint256,uint256)
           handler: handleChildTypeAuthorized
+        - event: URI(string,indexed uint256)
+          handler: handleURI
+        - event: UriUpdated(indexed uint256,string)
+          handler: handleUriUpdated
   # - TransferChildTokenBatch(indexed address,indexed uint256,indexed address,address,uint256[],uint256[])
       # callHandlers: 
       #   - function: mint(address,bytes32,string,uint256,address,bytes)
