Start using Typescript and add a Pinata uploader

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ packages/hardhat/.openzeppelin
 packages/hardhat/artifacts
 packages/hardhat/deployments
 packages/react-app/src/contracts
-packages/react-app/.development.env
+packages/react-app/.env.development
 packages/hardhat/cache
 packages/hardhat/typechain
 
