--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -29,6 +29,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.8",
+    "@types/isomorphic-fetch": "^0.0.35",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.1.7",
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@walletconnect/web3-provider": "^1.3.1",
@@ -37,9 +43,11 @@
     "apollo-client": "^2.6.10",
     "apollo-utilities": "^1.3.4",
     "axios": "^0.20.0",
+    "blob-to-buffer": "^1.2.9",
     "bnc-notify": "^1.5.0",
     "burner-provider": "^1.0.38",
     "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "eth-hooks": "^1.1.2",
     "ethers": "^5.0.31",
     "graphiql": "^1.0.5",
@@ -52,15 +60,18 @@
     "react-blockies": "^1.4.1",
     "react-css-theme-switcher": "^0.2.2",
     "react-dom": "^16.14.0",
+    "react-dropzone": "^11.3.1",
     "react-json-view": "^1.21.1",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.2.2",
     "web3modal": "^1.9.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^6.12.2",
-    "@types/react": "^16.9.19",
+    "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.4",
     "chalk": "^4.1.0",
     "eslint": "^7.5.0",
@@ -68,12 +79,12 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "ipfs-http-client": "^49.0.2",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-debug": "^4.0.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^9.0.0",
+    "ipfs-http-client": "^49.0.2",
     "less-plugin-npm-import": "^2.1.0",
     "prettier": "^2.0.5",
     "s3-folder-upload": "^2.3.1",
