--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-prettier": "^3.1.4"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.1.6",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
