--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -38,7 +38,7 @@
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@walletconnect/web3-provider": "^1.3.1",
-    "antd": "^4.7.0",
+    "antd": "^4.14.0",
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
     "apollo-utilities": "^1.3.4",
@@ -65,7 +65,9 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-three-fiber": "^5.3.19",
     "styled-components": "^5.2.1",
+    "three": "^0.126.1",
     "typescript": "^4.2.2",
     "web3modal": "^1.9.1"
   },
