--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "graph-deploy-local": "yarn workspace @scaffold-eth/subgraph graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 nft-minter/composable-contract",
     "graph-ship-local": "yarn graph-prepare && yarn graph-codegen && yarn graph-deploy-local",
     "deploy-and-graph": "yarn deploy && yarn graph-ship-local",
+    "ceramic-run-node": "cd docker/ceramic-node && docker-compose up",
+    "ceramic-remove-node": "cd docker/ceramic-node && docker-compose down",
     "theme": "yarn workspace @scaffold-eth/react-app theme",
     "watch-theme": "yarn workspace @scaffold-eth/react-app watch"
   },
