--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -15,8 +15,13 @@
     ]
   },
   "dependencies": {
+    "3id-connect": "^1.0.0-alpha.14",
     "@ant-design/icons": "^4.5.0",
     "@apollo/react-hooks": "^4.0.0",
+    "@ceramicnetwork/http-client": "^0.9.6",
+    "@ceramicstudio/idx": "^0.8.0",
+    "@ceramicstudio/idx-constants": "^0.7.0",
+    "@craco/craco": "^5.8.0",
     "@ethersproject/address": "^5.0.10",
     "@ethersproject/bignumber": "^5.0.14",
     "@ethersproject/bytes": "^5.0.10",
@@ -26,6 +31,7 @@
     "@ethersproject/units": "^5.0.10",
     "@pinata/sdk": "^1.1.13",
     "@ramp-network/ramp-instant-sdk": "^2.2.0",
+    "@stablelib/random": "^1.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.8",
@@ -43,7 +49,6 @@
     "apollo-client": "^2.6.10",
     "apollo-utilities": "^1.3.4",
     "axios": "^0.20.0",
-    "blob-to-buffer": "^1.2.9",
     "bnc-notify": "^1.5.0",
     "burner-provider": "^1.0.38",
     "dotenv": "^8.2.0",
@@ -52,19 +57,23 @@
     "ethers": "^5.0.31",
     "graphiql": "^1.0.5",
     "graphql": "^15.3.0",
+    "immutability-helper": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
+    "multicodec": "^0.5.6",
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
     "qrcode.react": "^1.0.0",
     "react": "^16.14.0",
     "react-blockies": "^1.4.1",
     "react-css-theme-switcher": "^0.2.2",
+    "react-dnd": "^14.0.1",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.3.1",
     "react-json-view": "^1.21.1",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^3.4.4",
     "react-three-fiber": "^5.3.19",
     "styled-components": "^5.2.1",
     "three": "^0.126.1",
@@ -96,10 +105,10 @@
     "extends": "react-app"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "craco build",
+    "start": "craco start",
+    "test": "craco test",
     "eject": "react-scripts eject",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
     "lint": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore ./src/**/*",
     "ipfs": "node ./scripts/ipfs.js",
     "surge": "surge ./build",
