--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "3id-connect": "^1.0.0-alpha.14",
+    "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^4.5.0",
     "@apollo/react-hooks": "^4.0.0",
     "@ceramicnetwork/http-client": "^0.9.6",
@@ -41,6 +42,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@walletconnect/web3-provider": "^1.3.1",
@@ -51,8 +53,10 @@
     "axios": "^0.20.0",
     "bnc-notify": "^1.5.0",
     "burner-provider": "^1.0.38",
+    "craco-antd": "^1.19.0",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
+    "enquire-js": "^0.2.1",
     "eth-hooks": "^1.1.2",
     "ethers": "^5.0.31",
     "graphiql": "^1.0.5",
@@ -63,6 +67,9 @@
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
     "qrcode.react": "^1.0.0",
+    "rc-queue-anim": "^1.8.5",
+    "rc-scroll-anim": "^2.7.6",
+    "rc-tween-one": "^2.7.3",
     "react": "^16.14.0",
     "react-blockies": "^1.4.1",
     "react-css-theme-switcher": "^0.2.2",
@@ -103,6 +110,11 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!antd|@ant-design|rc-.+?|@babel/runtime).+(js|jsx)$"
+    ]
   },
   "scripts": {
     "build": "craco build",
