--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -36,10 +36,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.8",
+    "@types/classnames": "^2.2.11",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.3",
+    "@types/react-blockies": "^1.4.0",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
@@ -61,6 +63,7 @@
     "ethers": "^5.0.31",
     "graphiql": "^1.0.5",
     "graphql": "^15.3.0",
+    "image-js": "^0.31.4",
     "immutability-helper": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
     "multicodec": "^0.5.6",
@@ -78,6 +81,7 @@
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.3.1",
     "react-json-view": "^1.21.1",
+    "react-layered-image": "^2.0.6",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
