--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -66,6 +66,7 @@
     "image-js": "^0.31.4",
     "immutability-helper": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
+    "konva": "^7.2.5",
     "multicodec": "^0.5.6",
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
@@ -81,7 +82,7 @@
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.3.1",
     "react-json-view": "^1.21.1",
-    "react-layered-image": "^2.0.6",
+    "react-konva": "^17.0.1-3",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
@@ -89,6 +90,7 @@
     "styled-components": "^5.2.1",
     "three": "^0.126.1",
     "typescript": "^4.2.2",
+    "use-image": "^1.0.7",
     "web3modal": "^1.9.1"
   },
   "devDependencies": {
