Use mobx to do shared state on minting page

--- a/packages/react-app/tsconfig.json
+++ b/packages/react-app/tsconfig.json
@@ -19,7 +19,8 @@
     "noEmit": true,
     "noImplicitAny": false,
     "jsx": "react-jsx",
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "useDefineForClassFields": true
   },
   "include": [
     "src"
