--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -67,6 +67,8 @@
     "immutability-helper": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
     "konva": "^7.2.5",
+    "mobx": "^6.1.8",
+    "mobx-react-lite": "^3.2.0",
     "multicodec": "^0.5.6",
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
@@ -87,6 +89,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-three-fiber": "^5.3.19",
+    "react-use": "16.1.0",
     "styled-components": "^5.2.1",
     "three": "^0.126.1",
     "typescript": "^4.2.2",
