--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -19,9 +19,12 @@
     "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^4.5.0",
     "@apollo/react-hooks": "^4.0.0",
+    "@ceramicnetwork/3id-did-resolver": "^1.1.1",
+    "@ceramicnetwork/doctype-caip10-link": "^0.13.4",
     "@ceramicnetwork/http-client": "^0.11.0-rc.1",
-    "@ceramicstudio/idx": "^0.9.0",
-    "@ceramicstudio/idx-constants": "^0.7.0",
+    "@ceramicstudio/idx": "^0.9.1",
+    "@ceramicstudio/idx-constants": "^1.0.0",
+    "@ceramicstudio/idx-tools": "^0.9.0",
     "@craco/craco": "^5.8.0",
     "@ethersproject/address": "^5.0.10",
     "@ethersproject/bignumber": "^5.0.14",
@@ -44,6 +47,7 @@
     "@types/react-blockies": "^1.4.0",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-stack-grid": "^0.7.0",
     "@types/styled-components": "^5.1.9",
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
@@ -56,6 +60,7 @@
     "bnc-notify": "^1.5.0",
     "burner-provider": "^1.0.38",
     "craco-antd": "^1.19.0",
+    "dids": "^2.0.1",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "enquire-js": "^0.2.1",
@@ -72,6 +77,7 @@
     "mobx-react-lite": "^3.2.0",
     "mobx-state-tree": "^5.0.1",
     "mst-gql": "^0.14.0",
+    "multibase": "^4.0.4",
     "multicodec": "^0.5.6",
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
@@ -92,6 +98,7 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "react-stack-grid": "^0.7.1",
     "react-three-fiber": "^5.3.19",
     "react-use": "16.1.0",
     "styled-components": "^5.2.1",
@@ -141,6 +148,8 @@
     "ship": "yarn surge",
     "theme": "npx gulp less",
     "watch": "node ./scripts/watch.js",
-    "generate-mst-gql": "yarn mst-gql --format ts http://localhost:8000/subgraphs/name/nft-minter/composable-contract --outDir src/subgraph_models"
+    "generate-mst-gql": "yarn mst-gql --format ts http://localhost:8000/subgraphs/name/nft-minter/composable-contract --outDir src/subgraph_models",
+    "ceramic-bootstrap": "node ./scripts/ceramicBootstrap.js",
+    "bump-ceramic": "yarn add @ceramicnetwork/ceramic-http-client@latest @ceramicstudio/idx@latest @ceramicstudio/idx-constants@latest @ceramicstudio/idx-tools@latest 3id-connect@next"
   }
 }
