--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -21,8 +21,8 @@
     "@apollo/react-hooks": "^4.0.0",
     "@ceramicnetwork/3id-did-resolver": "^1.1.1",
     "@ceramicnetwork/doctype-caip10-link": "^0.13.4",
-    "@ceramicnetwork/http-client": "^0.11.0-rc.1",
-    "@ceramicstudio/idx": "^0.9.1",
+    "@ceramicnetwork/http-client": "^0.10.1",
+    "@ceramicstudio/idx": "^0.10.0",
     "@ceramicstudio/idx-constants": "^1.0.0",
     "@ceramicstudio/idx-tools": "^0.9.0",
     "@craco/craco": "^5.8.0",
