--- a/docker/textile-server/package.json
+++ b/docker/textile-server/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@scaffold-eth/textile-server",
+  "name": "textile-server",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/server.ts",
+  "main": "./src/index.ts",
   "author": "",
   "license": "MIT",
   "scripts": {
     "generate": "yarn generate:graphql && yarn generate:textile",
     "generate:graphql": "npx graphql-codegen",
-    "generate:textile": "ts-node -r dotenv/config --files ./scripts/createDatabase.ts",
+    "generate:textile": "ts-node -r dotenv/config --files ./src/scripts/createDatabase.ts",
     "start": "node dist/index.js",
-    "dev": "ts-node -r dotenv/config --files  ./index.ts",
+    "dev": "ts-node -r dotenv/config --files  ./src/index.ts",
     "build": " yarn generate && yarn clean && tsc && yarn copy-schema",
     "clean": "rm -rf ./dist",
-    "copy-schema": "cp ./graphql/schema.graphql ./dist/graphql/schema.graphql"
+    "copy-schema": "cp ./src/graphql/schema.graphql ./dist/graphql/schema.graphql"
   },
   "dependencies": {
     "@textile/hub": "^6.0.2",
