--- a/docker/stitched-gql-server/package.json
+++ b/docker/stitched-gql-server/package.json
@@ -7,15 +7,17 @@
     "start": "nodemon --ext ts --exec 'ts-node' src/index.ts"
   },
   "dependencies": {
-    "@graphql-tools/schema": "^7.0.0",
-    "@graphql-tools/stitch": "^7.0.4",
-    "@graphql-tools/wrap": "^7.0.1",
+    "@graphql-tools/schema": "^7.1.3",
+    "@graphql-tools/stitch": "^7.5.1",
+    "@graphql-tools/wrap": "^7.0.5",
+    "@graphql-tools/load": "^6.2.8",
+    "@graphql-tools/url-loader": "^6.8.2",
     "concurrently": "^5.3.0",
     "cross-fetch": "^3.0.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.4.0",
+    "graphql": "^15.5.0",
     "nodemon": "^2.0.6",
     "wait-on": "^5.2.1"
   },
