--- a/docker/stitched-gql-server/package.json
+++ b/docker/stitched-gql-server/package.json
@@ -7,11 +7,12 @@
     "start": "nodemon --ext ts --exec 'ts-node' src/index.ts"
   },
   "dependencies": {
+    "@graphql-tools/batch-delegate": "^7.0.2",
+    "@graphql-tools/load": "^6.2.8",
     "@graphql-tools/schema": "^7.1.3",
     "@graphql-tools/stitch": "^7.5.1",
-    "@graphql-tools/wrap": "^7.0.5",
-    "@graphql-tools/load": "^6.2.8",
     "@graphql-tools/url-loader": "^6.8.2",
+    "@graphql-tools/wrap": "^7.0.5",
     "concurrently": "^5.3.0",
     "cross-fetch": "^3.0.6",
     "dotenv": "^8.2.0",
