Move textile-server and stitched-graphql-server into packages

--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "ceramic-remove-node": "cd docker/ceramic-node && docker-compose down",
     "theme": "yarn workspace @scaffold-eth/react-app theme",
     "watch-theme": "yarn workspace @scaffold-eth/react-app watch",
-    "generate-mst-gql": "yarn workspace @scaffold-eth/react-app generate-mst-gql",
-    "textile-run-server": "cd docker/textile-server && docker-compose up",
-    "textile-remove-server": "cd docker/textile-server && docker-compose down"
+    "generate:subgraph-mst-gql": "yarn workspace @scaffold-eth/react-app generate:subgraph-mst-gql",
+    "generate:textile-mst-gql": "yarn workspace @scaffold-eth/react-app generate:textile-mst-gql",
+    "textile-run-server": "cd packages/textile-server && docker-compose up",
+    "textile-remove-server": "cd packages/textile-server && docker-compose down"
   },
   "workspaces": {
     "packages": [
