--- a/packages/textile-server/Dockerfile
+++ b/packages/textile-server/Dockerfile
@@ -14,14 +14,16 @@ RUN rm -rf $APP/node_modules/
 RUN yarn global add typescript ts-node
 
 # copy the tarballs
-COPY yarn-offline-mirror $APP/
+# COPY yarn-offline-mirror $APP/
 
 # copy files needed for the install
-COPY package.json yarn.lock .yarnrc $APP/
+# COPY package.json yarn.lock .yarnrc $APP/
+COPY package.json yarn.lock $APP/
 
 
 # How can we do this in offline mode?
-RUN yarn --pure-lockfile --link-duplicates --cache-folder ./yarn-offline-mirror
+# RUN yarn --pure-lockfile --link-duplicates --cache-folder ./yarn-offline-mirror
+RUN yarn --pure-lockfile --link-duplicates
 
 COPY . $APP/
 
