--- a/packages/stitched-gql-server/package.json
+++ b/packages/stitched-gql-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stitched-gql-server",
+  "name": "@scaffold-eth/stitched-gql-server",
   "version": "0.0.1",
   "main": "src/index.ts",
   "license": "MIT",
