--- a/packages/textile-server/package.json
+++ b/packages/textile-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "textile-server",
+  "name": "@scaffold-eth/textile-server",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
