--- a/packages/stitched-gql-server/package.json
+++ b/packages/stitched-gql-server/package.json
@@ -4,7 +4,10 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --ext ts --exec 'ts-node' src/index.ts"
+    "dev": "nodemon --ext ts --exec 'ts-node' src/index.ts",
+    "start": "node dist/index.js",
+    "build": "yarn clean && tsc",
+    "clean": "rm -rf ./dist"
   },
   "dependencies": {
     "@graphql-tools/batch-delegate": "^7.0.2",
