--- a/packages/textile-server/package.json
+++ b/packages/textile-server/package.json
@@ -10,7 +10,7 @@
     "generate:graphql": "npx graphql-codegen",
     "generate:textile": "ts-node -r dotenv/config --files ./src/scripts/createDatabase.ts",
     "start": "node dist/index.js",
-    "dev": "ts-node -r dotenv/config --files  ./src/index.ts",
+    "dev": "nodemon -r dotenv/config --ext ts --exec 'ts-node' src/index.ts",
     "build": " yarn generate && yarn clean && tsc && yarn copy-schema",
     "clean": "rm -rf ./dist",
     "copy-schema": "cp ./src/graphql/schema.graphql ./dist/graphql/schema.graphql"
