--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -67,7 +67,7 @@
     "eth-hooks": "^1.1.2",
     "ethers": "^5.0.31",
     "graphiql": "^1.0.5",
-    "graphql": "^15.3.0",
+    "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "image-js": "^0.31.4",
     "immutability-helper": "^3.1.1",
@@ -148,7 +148,8 @@
     "ship": "yarn surge",
     "theme": "npx gulp less",
     "watch": "node ./scripts/watch.js",
-    "generate-mst-gql": "yarn mst-gql --format ts http://localhost:8000/subgraphs/name/nft-minter/composable-contract --outDir src/subgraph_models",
+    "generate:subgraph-mst-gql": "yarn mst-gql --format ts http://localhost:8000/subgraphs/name/nft-minter/composable-contract --outDir src/subgraph_models",
+    "generate:textile-mst-gql": "yarn mst-gql --format ts http://localhost:10000/graphql --outDir src/stitched_models",
     "ceramic-bootstrap": "node ./scripts/ceramicBootstrap.js",
     "bump-ceramic": "yarn add @ceramicnetwork/ceramic-http-client@latest @ceramicstudio/idx@latest @ceramicstudio/idx-constants@latest @ceramicstudio/idx-tools@latest 3id-connect@next"
   }
