--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -110,13 +110,20 @@
   "devDependencies": {
     "@testing-library/dom": "^6.12.2",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "^10.2.4",
     "chalk": "^4.1.0",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-debug": "^4.0.0",
@@ -124,12 +131,9 @@
     "gulp-postcss": "^9.0.0",
     "ipfs-http-client": "^49.0.2",
     "less-plugin-npm-import": "^2.1.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "s3-folder-upload": "^2.3.1",
     "surge": "^0.21.5"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "jest": {
     "transformIgnorePatterns": [
@@ -141,7 +145,8 @@
     "start": "craco start",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "lint": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore ./src/**/*",
+    "format": "prettier --write 'src/**/*.ts{,x}'",
+    "lint": "tsc --noEmit && eslint 'src/**/*.ts{,x}'",
     "ipfs": "node ./scripts/ipfs.js",
     "surge": "surge ./build",
     "s3": "node ./scripts/s3.js",
