Fix a lot of linting problems

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -18,8 +18,10 @@
     "3id-connect": "^1.0.0-alpha.15",
     "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/icons": "^4.5.0",
+    "@apollo/client": "^3.3.15",
     "@apollo/react-hooks": "^4.0.0",
     "@ceramicnetwork/3id-did-resolver": "^1.1.1",
+    "@ceramicnetwork/common": "^0.17.1",
     "@ceramicnetwork/doctype-caip10-link": "^0.13.4",
     "@ceramicnetwork/http-client": "^0.10.1",
     "@ceramicstudio/idx": "^0.10.0",
@@ -59,6 +61,7 @@
     "axios": "^0.20.0",
     "bnc-notify": "^1.5.0",
     "burner-provider": "^1.0.38",
+    "caip": "^0.9.2",
     "craco-antd": "^1.19.0",
     "dids": "^2.0.1",
     "dotenv": "^8.2.0",
@@ -66,11 +69,13 @@
     "enquire-js": "^0.2.1",
     "eth-hooks": "^1.1.2",
     "ethers": "^5.0.31",
+    "file-selector": "^0.2.4",
     "graphiql": "^1.0.5",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "image-js": "^0.31.4",
     "immutability-helper": "^3.1.1",
+    "ipfs-http-client": "^49.0.2",
     "isomorphic-fetch": "^3.0.0",
     "konva": "^7.2.5",
     "mobx": "^6.1.8",
@@ -85,6 +90,7 @@
     "rc-queue-anim": "^1.8.5",
     "rc-scroll-anim": "^2.7.6",
     "rc-tween-one": "^2.7.3",
+    "rc-upload": "^4.2.0",
     "react": "^16.14.0",
     "react-blockies": "^1.4.1",
     "react-css-theme-switcher": "^0.2.2",
@@ -129,7 +135,6 @@
     "gulp-debug": "^4.0.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^9.0.0",
-    "ipfs-http-client": "^49.0.2",
     "less-plugin-npm-import": "^2.1.0",
     "prettier": "^2.2.1",
     "s3-folder-upload": "^2.3.1",
