--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -59,9 +59,11 @@
     "apollo-client": "^2.6.10",
     "apollo-utilities": "^1.3.4",
     "axios": "^0.20.0",
+    "bl": "^5.0.0",
     "bnc-notify": "^1.5.0",
     "burner-provider": "^1.0.38",
     "caip": "^0.9.2",
+    "classnames": "^2.3.1",
     "craco-antd": "^1.19.0",
     "dids": "^2.0.1",
     "dotenv": "^8.2.0",
