Ignore specific rules in the generated mst-gql files

--- a/packages/react-app/.eslintignore
+++ b/packages/react-app/.eslintignore
@@ -1,5 +1,6 @@
 # folders
 build/
 node_modules/
-src/subgraph_models/
+src/subgraph_models/*.base.ts
+src/subgraph_models/index.ts
 src/components/Three
