--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scaffold-eth/monorepo",
+  "name": "@niftier/monorepo",
   "version": "1.0.0",
   "keywords": [
     "ethereum",
@@ -10,51 +10,51 @@
   ],
   "private": true,
   "scripts": {
-    "react-app:build": "yarn workspace @scaffold-eth/react-app build --max-old-space-size=12288",
-    "react-app:eject": "yarn workspace @scaffold-eth/react-app eject",
-    "react-app:start": "yarn workspace @scaffold-eth/react-app start",
-    "react-app:test": "yarn workspace @scaffold-eth/react-app test",
-    "build": "yarn workspace @scaffold-eth/react-app build --max-old-space-size=12288",
-    "chain": "yarn workspace @scaffold-eth/hardhat chain --hostname 0.0.0.0",
-    "console": "yarn workspace @scaffold-eth/hardhat hardhat console",
-    "fork": "yarn workspace @scaffold-eth/hardhat fork",
-    "node": "yarn workspace @scaffold-eth/hardhat chain",
-    "test": "yarn workspace @scaffold-eth/hardhat test",
-    "coverage": "yarn workspace @scaffold-eth/hardhat coverage",
-    "start": "yarn workspace @scaffold-eth/react-app start",
-    "compile": "yarn workspace @scaffold-eth/hardhat compile",
-    "deploy": "yarn workspace @scaffold-eth/hardhat deploy",
-    "watch": "yarn workspace @scaffold-eth/hardhat watch",
-    "accounts": "yarn workspace @scaffold-eth/hardhat accounts",
-    "balance": "yarn workspace @scaffold-eth/hardhat balance",
-    "send": "yarn workspace @scaffold-eth/hardhat send",
-    "ipfs": "yarn workspace @scaffold-eth/react-app ipfs",
-    "surge": "yarn workspace @scaffold-eth/react-app surge",
-    "s3": "yarn workspace @scaffold-eth/react-app s3",
-    "ship": "yarn workspace @scaffold-eth/react-app ship",
-    "generate": "yarn workspace @scaffold-eth/hardhat generate",
-    "account": "yarn workspace @scaffold-eth/hardhat account",
+    "react-app:build": "yarn workspace @niftier/react-app build --max-old-space-size=12288",
+    "react-app:eject": "yarn workspace @niftier/react-app eject",
+    "react-app:start": "yarn workspace @niftier/react-app start",
+    "react-app:test": "yarn workspace @niftier/react-app test",
+    "build": "yarn workspace @niftier/react-app build --max-old-space-size=12288",
+    "chain": "yarn workspace @niftier/hardhat chain --hostname 0.0.0.0",
+    "console": "yarn workspace @niftier/hardhat hardhat console",
+    "fork": "yarn workspace @niftier/hardhat fork",
+    "node": "yarn workspace @niftier/hardhat chain",
+    "test": "yarn workspace @niftier/hardhat test",
+    "coverage": "yarn workspace @niftier/hardhat coverage",
+    "start": "yarn workspace @niftier/react-app start",
+    "compile": "yarn workspace @niftier/hardhat compile",
+    "deploy": "yarn workspace @niftier/hardhat deploy",
+    "watch": "yarn workspace @niftier/hardhat watch",
+    "accounts": "yarn workspace @niftier/hardhat accounts",
+    "balance": "yarn workspace @niftier/hardhat balance",
+    "send": "yarn workspace @niftier/hardhat send",
+    "ipfs": "yarn workspace @niftier/react-app ipfs",
+    "surge": "yarn workspace @niftier/react-app surge",
+    "s3": "yarn workspace @niftier/react-app s3",
+    "ship": "yarn workspace @niftier/react-app ship",
+    "generate": "yarn workspace @niftier/hardhat generate",
+    "account": "yarn workspace @niftier/hardhat account",
     "mineContractAddress": "cd packages/hardhat && npx hardhat mineContractAddress",
     "wallet": "cd packages/hardhat && npx hardhat wallet",
-    "mint": "yarn workspace @scaffold-eth/hardhat mint",
+    "mint": "yarn workspace @niftier/hardhat mint",
     "fundedwallet": "cd packages/hardhat && npx hardhat fundedwallet",
     "flatten": "cd packages/hardhat && npx hardhat flatten",
     "graph-run-node": "cd docker/graph-node && docker-compose up",
     "graph-remove-node": "cd docker/graph-node && docker-compose down",
     "graph-prepare": "mustache packages/subgraph/config/config.json packages/subgraph/src/subgraph.template.yaml > packages/subgraph/subgraph.yaml",
-    "graph-codegen": "yarn workspace @scaffold-eth/subgraph graph codegen",
-    "graph-build": "yarn workspace @scaffold-eth/subgraph graph build",
-    "graph-create-local": "yarn workspace @scaffold-eth/subgraph graph create --node http://localhost:8020/ nft-minter/composable-contract",
-    "graph-remove-local": "yarn workspace @scaffold-eth/subgraph graph remove --node http://localhost:8020/ nft-minter/composable-contract",
-    "graph-deploy-local": "yarn workspace @scaffold-eth/subgraph graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 nft-minter/composable-contract",
+    "graph-codegen": "yarn workspace @niftier/subgraph graph codegen",
+    "graph-build": "yarn workspace @niftier/subgraph graph build",
+    "graph-create-local": "yarn workspace @niftier/subgraph graph create --node http://localhost:8020/ nft-minter/composable-contract",
+    "graph-remove-local": "yarn workspace @niftier/subgraph graph remove --node http://localhost:8020/ nft-minter/composable-contract",
+    "graph-deploy-local": "yarn workspace @niftier/subgraph graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 nft-minter/composable-contract",
     "graph-ship-local": "yarn graph-prepare && yarn graph-codegen && yarn graph-deploy-local",
     "deploy-and-graph": "yarn deploy && yarn graph-ship-local",
     "ceramic-run-node": "cd docker/ceramic-node && docker-compose up",
     "ceramic-remove-node": "cd docker/ceramic-node && docker-compose down",
-    "theme": "yarn workspace @scaffold-eth/react-app theme",
-    "watch-theme": "yarn workspace @scaffold-eth/react-app watch",
-    "generate:subgraph-mst-gql": "yarn workspace @scaffold-eth/react-app generate:subgraph-mst-gql",
-    "generate:textile-mst-gql": "yarn workspace @scaffold-eth/react-app generate:textile-mst-gql",
+    "theme": "yarn workspace @niftier/react-app theme",
+    "watch-theme": "yarn workspace @niftier/react-app watch",
+    "generate:subgraph-mst-gql": "yarn workspace @niftier/react-app generate:subgraph-mst-gql",
+    "generate:textile-mst-gql": "yarn workspace @niftier/react-app generate:textile-mst-gql",
     "textile-run-server": "cd packages/textile-server && docker-compose up",
     "textile-remove-server": "cd packages/textile-server && docker-compose down"
   },
