--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scaffold-eth/hardhat",
+  "name": "@niftier/hardhat",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
