--- a/packages/stitched-gql-server/package.json
+++ b/packages/stitched-gql-server/package.json
@@ -16,6 +16,7 @@
     "@graphql-tools/stitch": "^7.5.1",
     "@graphql-tools/url-loader": "^6.8.2",
     "@graphql-tools/wrap": "^7.0.5",
+    "@types/ws": "^7.4.1",
     "concurrently": "^5.3.0",
     "cross-fetch": "^3.0.6",
     "dotenv": "^8.2.0",
@@ -26,6 +27,9 @@
     "wait-on": "^5.2.1"
   },
   "devDependencies": {
-    "@types/wait-on": "^5.2.0"
+    "@types/node": "^14.14.41",
+    "@types/wait-on": "^5.2.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2"
   }
 }
