--- a/packages/stitched-gql-server/tsconfig.json
+++ b/packages/stitched-gql-server/tsconfig.json
@@ -3,10 +3,12 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "dist",
+    "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
