--- a/kubernetes/configmaps/subgraph-postgres.yaml
+++ b/kubernetes/configmaps/subgraph-postgres.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: subgraph-postgres
+  namespace: ambassador
   labels:
-    app: subgraph-postgres
+    service: subgraph-postgres
 data:
   POSTGRES_DB: graph-node
   POSTGRES_USER: graph-node
