--- a/kubernetes/deployments/graphql-textile.yaml
+++ b/kubernetes/deployments/graphql-textile.yaml
@@ -1,37 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -o kubernetes
-    kompose.version: 1.22.0 (955b78124)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: graphql-textile
   name: graphql-textile
+  namespace: ambassador
+  labels:
+    service: graphql-textile
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: graphql-textile
+      service: graphql-textile
   strategy: {}
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert -o kubernetes
-        kompose.version: 1.22.0 (955b78124)
-      creationTimestamp: null
+      # annotations:
       labels:
-        io.kompose.service: graphql-textile
+        service: graphql-textile
     spec:
       containers:
-        - env:
-            - name: PORT
-              value: "9000"
-          image: adairrr/graphql-textile-kubernetes
-          name: graphql-textile
-          ports:
-            - containerPort: 9000
-          resources: {}
-          tty: true
-      restartPolicy: Always
-status: {}
+      - name: graphql-textile
+        image: adairrr/graphql-textile-kubernetes
+        imagePullPolicy: IfNotPresent
+        env:
+          - name: PORT
+            value: "9000"
+        ports:
+          - containerPort: 9000
+            protocol: TCP
+        readinessProbe:
+          httpGet:
+            path: /.well-known/apollo/server-health
+            port: 9000
+        livenessProbe:
+          httpGet:
+            path: /.well-known/apollo/server-health
+            port: 9000
