--- a/kubernetes/pvcs/ceramic-node.yaml
+++ b/kubernetes/pvcs/ceramic-node.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  labels:
-    io.kompose.service: ceramic-node
   name: ceramic-node
+  namespace: ambassador
+  labels:
+    service: ceramic-node
 spec:
   accessModes:
     - ReadWriteOnce
