--- a/kubernetes/pvcs/subgraph-ipfs.yaml
+++ b/kubernetes/pvcs/subgraph-ipfs.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  labels:
-    io.kompose.service: subgraph-ipfs
   name: subgraph-ipfs
+  namespace: ambassador
+  labels:
+    service: subgraph-ipfs
 spec:
   accessModes:
     - ReadWriteOnce
