--- a/kubernetes/pvcs/subgraph-postgres.yaml
+++ b/kubernetes/pvcs/subgraph-postgres.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  labels:
-    io.kompose.service: subgraph-postgres
   name: subgraph-postgres
+  namespace: ambassador
+  labels:
+    service: subgraph-postgres
 spec:
   accessModes:
     - ReadWriteOnce
