--- a/kubernetes/services/ceramic-node.yaml
+++ b/kubernetes/services/ceramic-node.yaml
@@ -1,19 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -o kubernetes
-    kompose.version: 1.22.0 (955b78124)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: ceramic-node
   name: ceramic-node
+  namespace: ambassador
+  annotations:
+    a8r.io/owner: adairrr
+    a8r.io/description: "A service that exposes a Ceramic node"
+    a8r.io/repository: "https://github.com/adairrr/niftier/tree/develop/docker/ceramic-node"
+  labels:
+    service: ceramic-node
 spec:
   ports:
-    - name: "7007"
+    - name: ceramic-node-endpoint
       port: 7007
       targetPort: 7007
   selector:
-    io.kompose.service: ceramic-node
+    service: ceramic-node
 status:
   loadBalancer: {}
