Start working with Consul for East-West traffic management

--- a/kubernetes/configmaps/subgraph-node.yaml
+++ b/kubernetes/configmaps/subgraph-node.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: subgraph-node
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     service: subgraph-node
 data:
