--- a/kubernetes/configmaps/graphql-stitched.yaml
+++ b/kubernetes/configmaps/graphql-stitched.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: graphql-stitched
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     service: graphql-stitched
 data:
