--- a/kubernetes/pvcs/subgraph-ipfs.yaml
+++ b/kubernetes/pvcs/subgraph-ipfs.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: subgraph-ipfs
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     service: subgraph-ipfs
 spec:
