--- a/kubernetes/pvcs/subgraph-postgres.yaml
+++ b/kubernetes/pvcs/subgraph-postgres.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: subgraph-postgres
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     service: subgraph-postgres
 spec:
